# worker

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.ebextensions/: change_permissions.config
.github/workflows/: checks.yml  production.yml  staging.yml
app/: asgi.py  fs.py  main.py  manager.py  run.sh  settings.py  status.py  storage.py
app/env/: __init__.py  local.example.py
app/programs/: __init__.py
app/programs/Devoluciones API Mercado Pago/: main.py
app/programs/blue_express/: README.md  main.py
app/programs/blue_express/data/: BBDD Blue Oct (Analisis).xls  BBDD Tarifarios .xls  ECOMSUR DISTR OCTUBRE 20 Guess.xls
app/programs/blue_express/modules/: compare.py  cost_calculator.py  key_builder.py  paths.py  reader.py  ref_builder.py  weight_code_calculator.py  writer.py
app/programs/blue_express/results/: diferencias.csv  errores_ref.csv
app/programs/calculo_quinta_peru/: __init__.py  main.py
app/programs/calculo_quinta_peru/data/: Datos Planilla Activos PB.xlsx  Planilla Haberes Julio-2021 - Peru Brands.xlsx  RECALCULO 5TA A SET-21.xlsx
app/programs/calculo_quinta_peru/modules/: params.py  processor.py  reader.py  (+1 more)
app/programs/consolidacion_compras_por_estilo/: Readme.txt  __init__.py  main.py
app/programs/cruce_pagina_ecommerce/: README.md  __init__.py  main.py
app/programs/devoluciones_api_mercado_pago/: main.py
app/programs/example/: __init__.py
app/programs/recepcion_mercaderia_discrepancias/: Readme.txt  main.py
app/programs/reporte_de_inventario/: Readme.md  main.py
app/programs/revision_bbdd_ventas_y_stock/: main.py  modules.py
(+83 files in other folders)
